--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --experimental-modules --es-module-specifier-resolution=node index.js"
+     "start": "node index.js",
+  "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
