--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^2.0.2",
     "node-appwrite": "^20.2.1",
     "nodemon": "^2.0.21",
+    "prerender-node": "^3.8.3",
     "stripe": "^11.15.0"
   }
 }
