--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-appwrite": "^20.2.1",
     "nodemon": "^2.0.21",
     "prerender-node": "^3.8.3",
-    "stripe": "^11.15.0"
+    "stripe": "^11.15.0",
+    "uuid": "^13.0.0"
   }
 }
