--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
     "form-data": "^4.0.5",
     "helmet": "^8.1.0",
     "ipaddr.js": "^2.3.0",
