--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
     "form-data": "^4.0.5",
+    "google-auth-library": "^10.5.0",
     "helmet": "^8.1.0",
     "ipaddr.js": "^2.3.0",
     "joi": "^18.0.2",
